fixes issue with table overlapping header, used has-header class and removed margin from subheader

--- a/ionic/senseus/www/css/style.css
+++ b/ionic/senseus/www/css/style.css
@@ -21,3 +21,6 @@ div.event-col10.col-md-2.col-sm-2.col-lg-2{
 .padding-added{
 	padding: 10px 0px;
 }
+#senseus-calendar-header{
+	margin: 0;
+}
